--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
 <head>
-<meta name="bing-analysis-id" content="301h1k35392p2p35">
 <!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏--><meta charset="utf-8"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
 <!-- 
 未经许可禁止擅自盗用,修改及仿制
@@ -111,6 +110,14 @@ Copy prohibited
                             <i class="fa fa-home"></i>
                             <span>前往主站</span>
                         </a>
+                        <a href="https://www.bilbil.icu/" target="_blank">
+                            <i class="fa fa-comment"></i>
+                            <span>论坛</span>
+                        </a>
+                        <a href="http://www.xn--xhqp98cgie.com/" target="_blank">
+                            <i class="fa fa-download"></i>
+                            <span>资源站</span>
+                        </a>
                         <a href="http://mroe.eu.org/" target="_blank">
                             <i class="fa fa-cloud"></i>
                             <span>前往监控页面</span>
@@ -118,10 +125,6 @@ Copy prohibited
                         <a href="mailto:mroe.org@gmail.com" target="_blank">
                             <i class="fa fa-envelope"></i>
                             <span>E-Mail</span>
-                        </a>
-                        <a href="https://steamcommunity.com/" target="_blank">
-                            <i class="fa fa-steam"></i>
-                            <span>Steam</span>
                         </a>
                         <a href="https://t.me/mroe_org" target="_blank">
                             <i class="fa fa-telegram"></i>
