--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="zh-cmn-Hans">
 <head>
-<!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏--><meta charset="utf-8"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
+<meta charset="utf-8">
 <!-- 
 未经许可禁止擅自盗用,修改及仿制
 Template by: 沫雪 for mroe.org
 Copy prohibited
 已授权极东社
 -->
-    <meta http-equiv="X-UA-Compatible" content="ie=edge"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta name="HandheldFriendly" content="true"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta name="description" content="这里是极东社的导航站，极东社是一个ACG发布分享平台，二次元文化爱好者的集结地。 在这里你可以分享交流学习二次元文化。"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta property="og:description" content="这里是极东社的导航站，极东社是一个ACG发布分享平台，二次元文化爱好者的集结地。 在这里你可以分享交流学习二次元文化。"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta name="keywords" content="爱萌,ACG交流,极东社,极东,极东社群,极东社APP,极东社账号,极东社注册,galgame,绅士,ACGN,绅士领域,二次元文化,交流社区,极东次元,萌宅领域,ASMR,同人音声,MMD,Cosplay,动漫领域,mroe"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+    <meta name="HandheldFriendly" content="true">
+    <meta name="description" content="这里是极东社的导航站，极东社是一个ACG发布分享平台，二次元文化爱好者的集结地。 在这里你可以分享交流学习二次元文化。">
+    <meta property="og:description" content="这里是极东社的导航站，极东社是一个ACG发布分享平台，二次元文化爱好者的集结地。 在这里你可以分享交流学习二次元文化。">
+    <meta name="keywords" content="爱萌,ACG交流,极东社,极东,极东社群,极东社APP,极东社账号,极东社注册,galgame,绅士,ACGN,绅士领域,二次元文化,交流社区,极东次元,萌宅领域,ASMR,同人音声,MMD,Cosplay,动漫领域,mroe">
     <title>极东社 - 导航页</title>
-    <meta property="og:description" content="极东社是一个ACG发布分享平台，二次元文化爱好者的集结地。 在这里你可以分享交流学习二次元文化。与君初相识，犹如故人归，快加入我们的大家庭吧。"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta name="keywords" content="爱萌,ACG交流,极东社,极东,极东社群,极东社APP,极东社账号,极东社注册,galgame,绅士,ACGN,绅士领域,二次元文化,交流社区,极东次元,萌宅领域,ASMR,同人音声,MMD,Cosplay,动漫领域,mroe"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta property="og:title" content=""><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta property="og:site_name" content="极东社 - 导航页"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta property="og:url" content="https://jidong.github.io/"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta property="og:type" content="article"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <meta property="og:image" content="img/logo.png"><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
+    <meta property="og:description" content="极东社是一个ACG发布分享平台，二次元文化爱好者的集结地。 在这里你可以分享交流学习二次元文化。与君初相识，犹如故人归，快加入我们的大家庭吧。">
+    <meta name="keywords" content="爱萌,ACG交流,极东社,极东,极东社群,极东社APP,极东社账号,极东社注册,galgame,绅士,ACGN,绅士领域,二次元文化,交流社区,极东次元,萌宅领域,ASMR,同人音声,MMD,Cosplay,动漫领域,mroe">
+    <meta property="og:title" content="">
+    <meta property="og:site_name" content="极东社 - 导航页">
+    <meta property="og:url" content="https://jidong.github.io/">
+    <meta property="og:type" content="article">
+    <meta property="og:image" content="img/logo.png">
     <link rel="stylesheet" href="css/minireset.css">
     <link href="css/main.css" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
@@ -155,8 +155,8 @@ Copy prohibited
         </footer>
     </main>
 
-    <script src="js/jquery.min.js"></script><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
-    <script src="js/main.js"></script><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/main.js"></script>
 
 
-</body><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏--></html><!--!‭‪‪‫‬‏‫‭‬‭‪‏‭‫‭‬‎‫‬‎‫‭‪‏-->
+</body></html>
