--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ Copy prohibited
     <meta name="keywords" content="爱萌,ACG交流,极东社,极东,极东社群,极东社APP,极东社账号,极东社注册,galgame,绅士,ACGN,绅士领域,二次元文化,交流社区,极东次元,萌宅领域,ASMR,同人音声,MMD,Cosplay,动漫领域,mroe">
     <meta property="og:title" content="">
     <meta property="og:site_name" content="极东社 - 导航页">
-    <meta property="og:url" content="https://jidong.github.io/">
+    <meta property="og:url" content="https://www.mroe.org/">
     <meta property="og:type" content="article">
     <meta property="og:image" content="img/logo.png">
     <link rel="stylesheet" href="css/minireset.css">
