--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@ Copy prohibited
                             <i class="fa fa-home"></i>
                             <span>前往主站</span>
                         </a>
-                        <a href="https://www.bilbil.icu/" target="_blank">
+                        <a href="https://www.mroe.cf/" target="_blank">
                             <i class="fa fa-comment"></i>
                             <span>论坛</span>
                         </a>
-                        <a href="http://www.xn--xhqp98cgie.com/" target="_blank">
+                        <a href="http://www.moeo.eu/" target="_blank">
                             <i class="fa fa-download"></i>
                             <span>资源站</span>
                         </a>
