--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Copy prohibited
                             <i class="fa fa-home"></i>
                             <span>前往主站</span>
                         </a>
-                        <a href="https://www.mroe.cf/" target="_blank">
+                        <a href="https://www.mroe.ml/" target="_blank">
                             <i class="fa fa-comment"></i>
                             <span>论坛</span>
                         </a>
