--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Copy prohibited
                             <i class="fa fa-envelope"></i>
                             <span>E-Mail</span>
                         </a>
-                        <a href="https://t.me/mroe_org" target="_blank">
+                        <a href="https://t.me/+DOOZeq3ramMyN2Q1" target="_blank">
                             <i class="fa fa-telegram"></i>
                             <span>电报群</span>
                         </a>
